commit 3, threads are going on