@@ -1,37 +1,58 @@
 package Algorithms;
-import java.util.*;
+import java.util.Deque;;
+// TODO: Auto-generated Javadoc
 /**
- * Read from a standard input a series of exam scores,    
- * then compute the min, max, avg, med, & stand deviation.
+ * From a Deque of integers compute the min, max, avg, med, & stand deviation.
  */
 public class DescriptiveStats
 {
 
-	List<Integer> scores; 
+	/** The values. */
+	Deque<Integer> values; 
 
 
-	public DescriptiveStats(List<Integer> scores) {
-		this.scores = scores;
+	/**
+	 * Instantiates a new descriptive stats.
+	 *
+	 * @param values the values
+	 */
+	public DescriptiveStats(Deque<Integer> values) {
+		this.values = values;
 	}
 
 
 
 
 
-	public List<Integer> getScores() {
-		return scores;
+	/**
+	 * Gets the values.
+	 *
+	 * @return the values
+	 */
+	public Deque<Integer> getvalues() {
+		return values;
 	}
 
 
-	public void setScores(List<Integer> scores) {
-		this.scores = scores;
+	/**
+	 * Sets the values.
+	 *
+	 * @param values the new values
+	 */
+	public void setvalues(Deque<Integer> values) {
+		this.values = values;
 	}
 
 
+	/**
+	 * Gets the min.
+	 *
+	 * @return the min
+	 */
 	public int getMin()
 	{
-		int min = scores.get(0);
-		for(int i: scores){      
+		int min = values.getFirst();
+		for(int i: values){      
 			if(min>i){
 				min=i;
 			}
@@ -39,50 +60,71 @@ public class DescriptiveStats
 		return min;
 	}
 
+	/**
+	 * Gets the max.
+	 *
+	 * @return the max
+	 */
 	public int getMax()
 	{
-		int max = scores.get(0);
-		for(int i: scores){
+		int max = values.getFirst();
+		for(int i: values){
 			if(max<i)
 				max=i;
 		}
 		return max;
 	}
 
-	public int getMedian()
-	{
-		Collections.sort(scores);
-		int middle = scores.size()/2;
-		if(scores.size()%2==1){
-			return scores.get(middle);
-		}
-		return (scores.get(middle-1) + scores.get(middle));
-	}
+//	/**
+//	 * Gets the median.
+//	 *
+//	 * @return the median
+//	 */
+//	public int getMedian()
+//	{
+//		Collections.sort(values);
+//		int middle = values.size()/2;
+//		if(values.size()%2==1){
+//			return values.get(middle);
+//		}
+//		return (values.get(middle-1) + values.get(middle));
+//	}
 
 
+	/**
+	 * Gets the mean.
+	 *
+	 * @return the mean
+	 */
 	public int getMean()
 	{
 
 		int mean = 0;
 		int sum = 0;
-		for(int i: scores){
+		for(int i: values){
 			sum += i;
 		}
-		mean = sum/scores.size();
+		mean = sum/values.size();
 		return mean;
 	}
 
+	/**
+	 * Gets the standard dev.
+	 *
+	 * @param m the m
+	 * @return the standard dev
+	 */
 	public double getStandardDev(int m)
 	{
 		int mean = m;
 		double result =0;
 		double total = 0;
-		for(int i: scores){
+		for(int i: values){
 			result += Math.pow(i-mean,2);
 			
 
 		}
-		total = result/scores.size();
+		total = result/values.size();
 		double standev = Math.sqrt(total);
 		return standev;
 	}
